# biodynamo

./: .clang-tidy  .clang-tidy-ignore  .editorconfig  .gitignore  .mailmap  .rootrc  .style.yapf  .travis.yml  .yapfignore  BioDynaMo_FAQ.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DiffusionEuler.m  LICENSE  NOTICE  README.md  Singularity  b-osx-clang39  b-osx-clang39-fink  b-osx-gcc6-fink  b-osx-icc  c_flag_overrides.cmake  cdm_macro.cc  cxx_flag_overrides.cmake  event_handler.cc  figure5-dict_linkdef.h  install.sh  new_architecture.cc  pom.xml  pos2idx.m  prerequisites.sh  runBiodynamoTestsMain-dict_linkdef.h  run_aclic  run_cdm_macro  run_declare  run_simd_comparison.sh  run_test.m  sonar-project.properties  (+4 more)
cmake/: Benchmarking.cmake  BioDynaMo.cmake  BioDynaMoConfig.cmake  BioDynaMoGui.cmake  CMakeLists.txt  CaptureCommandLine.cmake  CheckCompiler.cmake  CodeCoverage.cmake  CppStyleGuideChecks.cmake  DistClean.cmake  Documentation.cmake  Doxyfile.in  FindBenchmark.cmake  FindClangTools.cmake  FindCoverage.cmake  FindLibroadrunner.cmake  FindMKDocs.cmake  FindNuma.cmake  FindOpenCL.cmake  FindROOT.cmake  FindTBB.cmake  FindVTune.cmake  FindValgrind.cmake  Findjemalloc.cmake  Findpip.cmake  Findtcmalloc.cmake  Installation.cmake  Notebooks.cmake  RootMacros.cmake  RootUseFile.cmake  SetCompilerFlags.cmake  StyleGuideChecks.cmake  Testing.cmake  UseBioDynaMo.cmake.in  Versioning.cmake  Website.cmake  bdm-dictionary  biodynamo_linux.env  biodynamo_linux_dev.env  biodynamo_macos.env  (+14 more)
cmake/env/: bdm-config.in  binder_thisbdm.sh  gen_benchmark_plots.py  launcher.sh  source_root_auto.sh  thisbdm.fish  thisbdm.sh  version.sh
cmake/env/sh_functions/: __bdm_zsh_completions  mpirun  pvbatch  pvpython  root
cmake/env/shell_functions/: paraview
cmake/generate_linkdef/: generate_linkdef_macro.cc  linkdef_generator_template.cc.in
cmake/installation/common/: biodynamo_linux_env.sh  biodynamo_macos_env.sh  echo.sh  install.sh  util.sh
cmake/installation/osx/: install.sh  prerequisites.sh
cmake/installation/travis-linux/: Dockerfile  install.sh  prerequisites.sh
cmake/installation/travis-osx/: install.sh  prerequisites.sh
cmake/installation/ubuntu-16.04/: Dockerfile  install.sh  prerequisites.sh
cmake/modules/: FindGMP.cmake
cmake/non-cmake-build/: bdm-config  bdm_code_generation
cmake/prerequisites/: centos-7.6.1810-install.cmake  osx-install.cmake  travis-linux-install.cmake  travis-osx-install.cmake  ubuntu-16.04-install.cmake  ubuntu-18.04-install.cmake
cmake/snap/: build_snap_package.sh  snapcraft.yaml.in
cmake/travis-ci/: default_build.sh  deploy.sh  installation_test.sh
cmake/version/: generate_version_files.py  version.h  version.py
cmake_standalone/: CMakeLists.txt
cmake_wo_swig/: CMakeLists.txt
demo/diffusion/: CMakeLists.txt  README.md  bdm.toml  diffusion_module.h
demo/diffusion/src/: diffusion.cc  diffusion.h  diffusion_biology_modules.h  diffusion_module.h
demo/distributed/: CMakeLists.txt  Dockerfile  README.md  README.rst  driver.py  parse_timing_log.py
demo/distributed/src/: backend.h  bdm_ray.h  distributed.cc  distributed.h  partitioner.cc  partitioner.h
demo/epidemiology/: CMakeLists.txt  measles.json  optim.json  plot-style.json  render.py  run.sh  test.sh  visualize-rooteve.sh  visualize.sh
demo/epidemiology/src/: analytical-solution.cc  analytical-solution.h  behavior.h  epidemiology.cc  epidemiology.h  evaluate.h  person.h  sim-param.h
demo/mars/: CMakeLists.txt  README.md  bdm.toml  check_results.py
demo/mars/src/: CelestialObjects.h  mars.cc  mars.h
demo/multiple_simulations/: CMakeLists.txt
demo/multiple_simulations/src/: multiple_simulations.cc  multiple_simulations.h
demo/parameters/: CMakeLists.txt
demo/parameters/src/: parameters.cc  parameters.h
doc/: CMakeLists.txt  Doxyfile.in  c++.md  docker.md  example_conditional_compilation.cc  io.md  memory_layout.md  runonlxplus.md
doc/api/: Doxyfile.in  DoxygenLayout.xml
doc/blog/: epidemiology-final.md  epidemiology.md  neuronal_growth.md  newtechchair.md  release_v1.0.md  release_v1.02.md  release_v1.04.md  thermodynamics.md  workshop-2111.md
doc/dev_guide/: build.md  code_quality.md  contribute.md  index.md  mkdocs.yml  new_os.md  release.md
doc/dev_guide/docs/: build.md  code_quality.md  contribute.md  index.md
doc/other/: background.md  publications.md
doc/reference_manual/: local_cernbox.md
doc/sidebars/: devguide.yaml  userguide.yaml
doc/user_guide/: Singularity.md  add_page.md  changelog.md  contact.md  diffusion.md  environment.md  event.md  faq.md  first_steps.md  fp_precision.md  gpu_acceleration.md  hello_world.md  index.md  installation.md  math_array.md  mkdocs.yml  multi_simulation.md  new_agent_event.md  opengl_issues.md  operation.md  parameter.md  prerequisites.md  release_notes_v1.0.md  release_notes_v1.02.md  release_notes_v1.04.md  simulation_parameter_tutorial.md  soma_clustering.md  substance_initializers.md  tumor_concept.md  visualization.md
doc/user_guide/docs/: Frequently asked questions.md  cancer_growth (1).md  cancer_growth.md  cells_moving.md  changelog.md  contact.md  diffusion.md  documentation.md  event.md  first_steps.md  getting_started.md  gpu_acceleration.md  hello_world.md  (+16 more)
paraview_plugin/: CMakeLists.txt
paraview_plugin/GlyphExt/: CMakeLists.txt  vtkGlyph3DExt.cc  vtkGlyph3DExt.h  vtkPVGlyphFilterExt.cc  vtkPVGlyphFilterExt.h  vtkPVGlyphFilterExt.xml
paraview_plugin/Plugin/: CMakeLists.txt  paraview.plugin
paraview_plugin/bdm_glyph/: BDMGlyph.cc  BDMGlyph.h  BDMGlyphFilter.cc  BDMGlyphFilter.h  CMakeLists.txt  README.md  bdm_glyph.cc  bdm_glyph_filter.cc  bdm_glyph_filter.xml
test/benchmark/: CMakeLists.txt  bdm-bench.h  bdmJSONReporter.cc  bdm_benchmark.h  bench-main.cc  bench_gen_html_page.py  bench_soma_clustering.cc  bench_tumor_concept.cc  gen_benchmark_plots.py  gen_html_page.cpp  gen_html_page.py  graph.py  main-soma.cc  main.cc  my_bench.sh  soma_clustering_bm.cc  tumor_concept_bm.cc  version.sh
util/simulation-template/: .gitignore  CMakeLists.txt  README.md
(+8117 files in other folders)
